# induIA

./: .gitignore  Dockerfile  README.md  catboost.ipynb  catboostt.ipynb  pyproject.toml  r.ipynb  resultat_final2.csv  train_models.py
.github/workflows/: ci.yml
app/: logging_config.py  main.py
app/data/models/: model_frequence.pkl  model_severite.pkl
app/services/: service.py
app/templates/: index.html
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/models/: model_freq.cbm  model_sev.cbm
tests/: test_api.py
